--- a/src/qt/res/css/traditional.css
+++ b/src/qt/res/css/traditional.css
@@ -142,10 +142,14 @@ QPushButton - Special case, tabbar replacement buttons
 ModalOverlay
 ******************************************************/
 
+ModalOverlay {
+    background-color: #fafafa;
+}
+
 QWidget#bgWidget { /* The frame overlaying the overview-page */
     padding-left: 10px;
     padding-right: 10px;
-    background-color: #ccfafafa;
+    background-color: #fafafa;
 }
 
 QWidget#contentWidget { /* The actual content with the text/buttons/etc... */
